@@ -22,6 +22,13 @@ test {
 
     jvmArgs = [
             '-Xshare:off',
+            '--enable-preview',
+            '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
+            '--add-exports=java.base/sun.reflect.generics.tree=ALL-UNNAMED',
+            '--add-exports=java.base/sun.net.www.protocol.ftp=ALL-UNNAMED',
+            '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
+            '--add-exports=java.desktop/sun.font=ALL-UNNAMED',
+            '--add-exports=java.base/sun.security.action=ALL-UNNAMED',
             '--add-opens=java.base/java.lang=ALL-UNNAMED',
             '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
             '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
@@ -29,11 +36,43 @@ test {
             '--add-opens=java.base/sun.net=ALL-UNNAMED',
             '--add-opens=java.base/java.math=ALL-UNNAMED',
             '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED',
+            '--add-opens=java.base/sun.net=ALL-UNNAMED',
             '--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
             '--add-opens=java.desktop/sun.font=ALL-UNNAMED',
             '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
-            '--add-exports=java.desktop/sun.awt=ALL-UNNAMED',
-            '--add-exports=java.desktop/sun.font=ALL-UNNAMED'
+            '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.math=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
+            '--add-opens=java.base/java.security=ALL-UNNAMED',
+            '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED',
+            '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+            '--add-opens=java.base/java.net=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.management/java.lang.management=ALL-UNNAMED',
+            '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+            '--add-opens=java.management/sun.management=ALL-UNNAMED',
+            '--add-opens=java.base/sun.security.action=ALL-UNNAMED',
+            '--add-opens=java.management/java.lang.management=ALL-UNNAMED',
+            '--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED',
+            '--add-opens=java.management/sun.management=ALL-UNNAMED',
+            '--add-opens=java.base/java.time=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+            '--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED',
+            '--add-opens=java.base/java.security=ALL-UNNAMED',
+            '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED',
+            '--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED',
+            '--add-opens=java.base/java.net=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.math=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED',
+            '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED',
+            '--add-opens=java.base/sun.net.util=ALL-UNNAMED',
+            '--add-opens=java.base/sun.net.util=ALL-UNNAMED'
     ]
 
     //编译时自动执行jacocoTestReport，生成报告；报告路径build/reports/jacoco/test/html/index.html
